2024-05-23T08:15:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9204563163 # 298
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-23
* notice: last 14d: unq all: 5 4100
* notice: prev accum: outdated-unq outdated-all / unq all: 2041 206361 / 2073 210516
* notice: next accum: outdated-unq outdated-all / unq all: 2041 206361 / 2075 210627
* notice: prev exec diff / last date diff / accum: unq all: +2 +111 -1 -116 / +2 +111 -0 -0 / 2 111
* notice: removed / changed dates: [] / [2024-05-09 2024-05-23]

2024-05-23T00:54:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9200486460 # 297
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-23
* notice: last 14d: unq all: 6 4105
* notice: prev accum: outdated-unq outdated-all / unq all: 2039 206064 / 2073 210422
* notice: next accum: outdated-unq outdated-all / unq all: 2041 206361 / 2073 210516
* notice: prev exec diff / last date diff / accum: unq all: +0 +94 -1 -50 / +2 +297 -0 -0 / 2 297
* notice: removed / changed dates: [2024-05-08] / [2024-05-09 2024-05-22]

2024-05-22T16:16:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9194861255 # 296
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-22
* notice: last 14d: unq all: 7 4102
* notice: prev accum: outdated-unq outdated-all / unq all: 2039 206064 / 2073 210330
* notice: next accum: outdated-unq outdated-all / unq all: 2039 206064 / 2073 210422
* notice: prev exec diff / last date diff / accum: unq all: +0 +92 -0 -91 / +2 +203 -0 -0 / 2 203
* notice: removed / changed dates: [] / [2024-05-08 2024-05-22]

2024-05-22T08:16:15Z: