@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-05-23T08:15:22Z",
+  "timestamp" : "2024-05-23T16:15:37Z",
   "count_outdated" : 206361,
   "uniques_outdated" : 2041,
-  "count" : 210627,
+  "count" : 210719,
   "uniques" : 2075,
   "clones" : [
     {
       "timestamp": "2024-05-09T00:00:00Z",
-      "count": 132,
-      "count_minmax": [ 114, 298 ],
-      "count_decinc": [ 166, 298 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 4 ],
-      "uniques_decinc": [ 2, 4 ]
+      "count": 40,
+      "count_minmax": [ 40, 298 ],
+      "count_decinc": [ 258, 298 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 4 ],
+      "uniques_decinc": [ 3, 4 ]
     },
     {
       "timestamp": "2024-05-10T00:00:00Z",
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2024-05-23T00:00:00Z",
-      "count": 111,
-      "count_minmax": [ 111, 111 ],
-      "count_decinc": [ 0, 111 ],
+      "count": 203,
+      "count_minmax": [ 111, 203 ],
+      "count_decinc": [ 0, 203 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
