@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2024-05-09T00:00:00Z",
-      "count": 132,
-      "uniques": 2
+      "count": 40,
+      "uniques": 1
     },
     {
       "timestamp": "2024-05-10T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2024-05-23T00:00:00Z",
-      "count": 111,
+      "count": 203,
       "uniques": 2
     }
   ]
